--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,11 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
+      <a href="/info.html" class="btn">Info</a>
+      <a href="/join.html" class="btn">Join DADA</a>
+      <a href="/activities.html" class="btn">Activities</a>
+      <a href="/companies.html" class="btn">For companies</a>
+      <a href="/contact.html" class="btn">Contact</a>
     </section>
 
     <section class="main-content">
