add empty pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       <a href="/index.html" class="btn">Info</a>
       <a href="/join.html" class="btn">Join DADA</a>
       <a href="/activities.html" class="btn">Activities</a>
-      <a href="/companies.html" class="btn">For companies</a>
+      <a href="/for_companies.html" class="btn">For companies</a>
       <a href="/contact.html" class="btn">Contact</a>
     </section>
 
