shittily add logo

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,9 @@
 #header_wrap {
   background-color: green;
 }
+
+.page-header {
+  background-image: url("/assets/images/logo_render.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
