fix broken links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="/index.html" class="btn">Info</a>
-      <a href="/join.html" class="btn">Join DADA</a>
+      <a href="/join-dada.html" class="btn">Join DADA</a>
       <a href="/activities.html" class="btn">Activities</a>
-      <a href="/for_companies.html" class="btn">For companies</a>
+      <a href="/for-companies.html" class="btn">For companies</a>
       <a href="/contact.html" class="btn">Contact</a>
     </section>
 
