--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   {% include head.html %}
   <body>
     <section class="page-header">
+      <a href="" class="logo"></a>
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="/index.html" class="btn">Posts</a>
