trying out new calendar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,7 +83,7 @@ $main-gray: #444545;
   p{
     color: $main-gray;
   }
-  .view-cap, .view-container-border{
+  #calendarContainer1{
     background-color: transparent !important;
   }
 }
