--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.print.css">
+  <link rel='stylesheet' href='../assets/css/fullcalendar.min.css' />
+  <link rel='stylesheet' media='print' href='../assets/css/fullcalendar.print.min.css' />
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/js/moment.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/fullcalendar.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.1.0/gcal.min.js"></script>
+  <script type="text/javascript" src='../assets/js/moment.min.js'></script>
+  <script type="text/javascript" src='../assets/js/fullcalendar.min.js'></script>
 </head>
